# pract_cpp2016

./: README.md  Заготовка отчета.docx
lab2/: hello_world.cpp
lab3/: 1729.cpp  CMakeLists.txt
lab4/: CMakeLists.txt  another_solution.cpp
lab4_alt/: CMakeLists.txt  main.cpp
lab5/: CMakeLists.txt  main.cpp
lab5_alt/: CMakeLists.txt  main.cpp
